--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "argparse": "^1.0.2",
     "jsdom-no-contextify": "^3.1.0",
     "jsonfile": "^2.0.0",
-    "togeojson": "git+https://github.com/bkane11/togeojson.git",
     "underscore": "^1.8.3",
     "unzip": "^0.1.11",
     "xml2js": "^0.4.8"
+  },
+  "devDependencies": {
+    "togeojson": "git+https://github.com/bkane11/togeojson.git"
   }
 }
