--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "argparse": "^1.0.2",
     "jsdom-no-contextify": "^3.1.0",
     "jsonfile": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "underscore": "^1.8.3",
     "unzip": "^0.1.11",
     "xml2js": "^0.4.8"
